[REFACTOR] 키워드 서비스 로직(특정 단어가 속하는가)을 도메인 로직으로 수정